* Added a classname ("mw-toolbar-editbutton") and unique IDs to the edit
  toolbar buttons
* Moved the main ob_start() from the default LocalSettings.php to WebStart.php. 
  The ob_start() section should preferably be removed from older 
  LocalSettings.php files.
* Give Content-Length header for HTTP/1.0 clients.
* Partial support for Flash cross-domain-policy filtering. 


== Languages updated ==

* Arabic (ar)
* Aramaic (arc)
* Belarusian (be)
* Breton (br)
* Czech (cs)
* Danish (da)
* German (de)
* Greek (el)
* Esperanto (eo)
* Spanish (es)
* Estonian (et)
* Basque (eu)
* Finnish (fi)
* French (fr)
* Hebrew (he)
* Indonesian (id)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kazakh (kk)
* Korean (ko)
* Ripuarian (ksh)
* Latin (la)
* Limburgish (li)
* Lithuanian (lt)
* Marathi (mr)
* Dutch (nl)
* Polish (pl)
* Russian (ru)
* Sicilian (scn)
* Slovak (sk)
* Swedish (sv)
* Zealandic (zea)

== Compatibility ==

MediaWiki 1.10 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

Some minor database changes have been made since 1.7:
* new fields and indexes on ipblocks
* index change on recentchanges

Several changes from 1.5 and 1.6 do require updates to be run on upgrade.
To ensure that these tables are filled with data, run refreshLinks.php after
the upgrade.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.



=== Caveats ===
